# rewrite-collection

./: .gitmodules  ReadMe.md  Rules.md  links.txt  tools.txt
kbc_tools/: wm-feb18-linux.tgz
kbc_tools/maxcomp/: EKBO.hs  EncodingELPOEKBO.hs  EncodingLPOKBO.hs  EncodingLinear.hs  EncodingSPO.hs  LPO.hs  Lex.hs  Main.hs  Order.hs  Parser.hs  Precedence.hs  README  Rewriting.hs  Rule.hs  Term.hs  cge2.trs  maxcomp.cabal
maxcomp/: .gitignore  Completion.hs  ELPO.hs  ELPOEKBO.hs  EncodingLinear2.hs  KBO.hs  Linear.hs  Makefile  SMT.hs  SPO.hs  TRS.hs  group.trs
rules/: count_rules.sh  critical_pair.py  parse_rules.py  trs_parser.py
rules/maxcomp/pathorders/: Kaliszyk_19_1long.trs  Kaliszyk_19_1rwr.trs  Kaliszyk_19_longhl.trs  Kaliszyk_19_longhlnb.trs  Kaliszyk_19_not_3258.trs  Kaliszyk_19_shor.trs  Kaliszyk_19_shornodot.trs  MNZ_10_labelled.trs  Transformed_CSR_04_LISTUTILITIES_complete_noand_iGM.trs
rules/maxcomp/repo/: cge5.trs
rules/mkbTT/: AD93_Z22.trs  BGK94_Z22W.trs  Chr89_A2.trs  Chr89_A24.trs  Chr89_A3.trs  LS06_CGE4.trs  SK90_3.01.trs  SK90_3.02.trs  SK90_3.03.trs  SK90_3.04.trs  SK90_3.05.trs  SK90_3.06.trs  SK90_3.07.trs  SK90_3.08.trs  SK90_3.09.trs  SK90_3.10.trs  SK90_3.11.trs  SK90_3.12.trs  SK90_3.13.trs  SK90_3.14.trs  SK90_3.15.trs  SK90_3.16.trs  SK90_3.17.trs  SK90_3.18.trs  SK90_3.19.trs  SK90_3.20.trs  SK90_3.21.trs  SK90_3.22.trs  SK90_3.23.trs  SK90_3.24.trs  SK90_3.25.trs  SK90_3.26.trs  SK90_3.27.trs  SK90_3.28.trs  SK90_3.29.trs  SK90_3.30.trs  SK90_3.31.trs  SK90_3.32.trs  SK90_3.33.trs  TPDB_thiemann27.trs
(+431 files in other folders)
